--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     --link-light: #92efff;
     --neon-underline-color: #31e1ff;
     --project-link-color: #7fceff;
-    --phone-color: #7fceff;
+    --phone-color: #6fcfff;
     --resume-btn-bg: #0f1c26;
 }
 
